name:                ebitor
version:             0.1.0.0
synopsis:            A tebxt ebitor
description:         Please see README.md
-- homepage:            http://github.com/name/project
license:             MIT
license-file:        LICENSE
author:              Paul Harper
maintainer:          benekastah@gmail.com
-- copyright:
category:            Text Editors
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    exposed-modules:     Ebitor.AATree
                       , Ebitor.AATree.Internal
                       , Ebitor.Api
                       , Ebitor.Application
                       , Ebitor.CommandParser
                       , Ebitor.Commander
                       , Ebitor.Lua
                       , Ebitor.ModalEditor
                       , Ebitor.Rope
                       , Ebitor.Rope.Generic
                       , Ebitor.Rope.Part
                       , Ebitor.Rope.Regex
                       , Ebitor.Utils
    build-depends:       base >= 4.7 && < 5
                       , array
                       , bytestring
                       , containers
                       , directory
                       , filepath
                       , hslua >= 0.4.0 && < 0.4.1
                       , parsec >= 3.1 && < 3.2
                       , regex-base == 0.93.*
                       , regex-tdfa == 1.2.*
                       , text >= 1.2 && < 1.3
                       , vty >= 5.2 && < 5.3
                       , vty-ui >= 1.9 && < 2
    default-extensions:  OverloadedStrings
    other-extensions:    GADTs
    default-language:    Haskell2010

executable eb
    hs-source-dirs:      app
    main-is:             Main.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , ebitor
                       , filepath
                       , random
                       , text >= 1.2 && < 1.3
                       , vty >= 5.2 && < 5.3
                       , vty-ui >= 1.9 && < 2
    default-extensions:  OverloadedStrings
    default-language:    Haskell2010

test-suite ebitor-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    build-depends:       base
                       , HTF >= 0.12
                       , QuickCheck
                       , ebitor
                       , regex-tdfa
                       , text
    default-extensions:  OverloadedStrings
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N -F -pgmF htfpp
    default-language:    Haskell2010

source-repository head
    type:     git
    location: https://github.com/benekastah/ebitor
