name:                ebitor
version:             0.1.0.0
synopsis:            A tebxt ebitor
description:         Please see README.md
homepage:            https://github.com/benekastah/ebitor
license:             MIT
license-file:        LICENSE
author:              Paul Harper
maintainer:          benekastah@gmail.com
-- copyright:
category:            Text Editors
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    exposed-modules:     Ebitor.Command
                       , Ebitor.Command.Parser
                       , Ebitor.Edit
                       , Ebitor.Events
                       , Ebitor.Events.JSON
                       , Ebitor.Language
                       , Ebitor.Rope
                       , Ebitor.Rope.Cursor
                       , Ebitor.Rope.Generic
                       , Ebitor.Rope.Part
                       , Ebitor.Rope.Regex
                       , Ebitor.Server
                       , Ebitor.Utils
    build-depends:       base >= 4.7 && < 5
                       , aeson == 0.9.0.*
                       , array
                       , bytestring
                       , containers
                       , directory
                       , filepath
                       , hslua >= 0.4.0 && < 0.4.1
                       , lens == 4.*
                       , network == 2.6.2.*
                       , parsec >= 3.1 && < 3.2
                       , regex-base == 0.93.*
                       , regex-tdfa == 1.2.*
                       , text >= 1.2 && < 1.3
                       -- Only used for keyboard event handling types
                       , vty == 5.4.*
    default-extensions:  OverloadedStrings
    other-extensions:    GADTs
    default-language:    Haskell2010

executable eb-server
    hs-source-dirs:      server
    main-is:             Main.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , ebitor
    default-extensions:  OverloadedStrings
    default-language:    Haskell2010

executable eb
    hs-source-dirs:      app
    main-is:             Main.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                       , aeson == 0.9.0.*
                       , ebitor
                       , filepath
                       , network == 2.6.2.*
                       , random
                       , text >= 1.2 && < 1.3
                       , unix == 2.7.0.*
                       , vty == 5.4.*
    default-extensions:  OverloadedStrings
    default-language:    Haskell2010

test-suite ebitor-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             Spec.hs
    build-depends:       base
                       , HTF >= 0.12
                       , QuickCheck
                       , ebitor
                       , regex-tdfa
                       , text
    default-extensions:  OverloadedStrings
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010

source-repository head
    type:     git
    location: https://github.com/benekastah/ebitor
